Quorum3/Library/Tests/TypeChecker/Pass/BooleanGetText.quorum
class Main
    action Main
        Boolean t 
        t:SetValue(false)
        boolean p = false

        output t:GetText()
        output p:GetText()
    end
end