Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBooleanIntegerField.quorum
class Main
    boolean bool
    action Main
        bool = cast(boolean, 5)
    end
end